# objectivelib

./: CMakeLists.txt  conan-build-relwithdebinfo.bat  conanfile.py  readme.txt
include/: objectivelib.h
src/: objectivelib.cpp  version.rc.in
test_package/: CMakeLists.txt
test_package/src/: example.cpp
